--- a/mandelbulber2/formula/ui/transf_spherical_coord_invs.ui
+++ b/mandelbulber2/formula/ui/transf_spherical_coord_invs.ui
@@ -41,17 +41,24 @@
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="0" column="1">
+     <item row="1" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledA_false">
+       <property name="text">
+        <string>swap xy</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabled">
        <property name="text">
         <string>M3D orientation</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+     <item row="2" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
        <property name="text">
-        <string>swap xy to xz</string>
+        <string>swap xz</string>
        </property>
       </widget>
      </item>
@@ -318,14 +325,14 @@ Use as pre-transform for one iteration</string>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
