mandelbulb_quadrat.png

--- a/mandelbulber2/formula/ui/mandelbulb_quadrat.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_quadrat.ui
@@ -30,6 +30,13 @@
     <number>2</number>
    </property>
    <item>
+    <widget class="QLabel" name="label_102">
+     <property name="text">
+      <string>Power 2</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QLabel" name="label_92">
      <property name="text">
       <string>DeltaDE linear = Quadrat3D M3D</string>
@@ -1294,11 +1301,6 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
@@ -1308,6 +1310,11 @@
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
   </customwidget>
   <customwidget>
    <class>MySpinBox</class>
